Bug 1258851 - Propagate the isScrollbarContainer layer flag to the compositor. r=mattwoodrow

MozReview-Commit-ID: F0U0mNTI9i